--- a/app/views/zines/show.html.erb
+++ b/app/views/zines/show.html.erb
@@ -1,4 +1,5 @@
 <%= @zine.title %>
 <%= @zine.excerpt %>
 by <%= AuthorsPresenter.new(@zine.authors).names %>
+<a href="<%= @zine.download_url %>">Download</a>
 <%= @zine.full_text %>
