--- a/app/views/zines/index.html.haml
+++ b/app/views/zines/index.html.haml
@@ -1,1 +1,18 @@
-= render @zines
+#zines.hfeed
+  - @zines.each_with_index do |zine, index|
+    = div_for zine, :class => "column span-24 hentry" do
+      .column.span-4
+      .meta.column.span-20.last
+        .entry-title
+          %h3= link_to_title_tag(zine)
+          - if zine.subtitle
+            %h4= link_to_subtitle_tag(zine)
+        %h5
+          %span.alt by
+          = author_name(zine)
+        - if zine.excerpt?
+          %section.excerpt.entry-summary
+            = simple_format zine.excerpt
+        = link_to "View more &rarr;".html_safe, zine_path(zine)
+        - unless (index += 1) === zines.length
+          %hr
