--- a/app/views/zines/index.html.haml
+++ b/app/views/zines/index.html.haml
@@ -2,7 +2,8 @@
   - @zines.each_with_index do |zine, index|
     = div_for zine, :class => "column span-24 hentry" do
       .column.span-4
-      .meta.column.span-20.last
+        = zine.cover_image_tag
+      .meta.column.span-20
         .entry-title
           %h3= zine.title_link
         .entry-title
