--- a/app/views/zines/index.html.haml
+++ b/app/views/zines/index.html.haml
@@ -8,8 +8,10 @@
           %h3= zine.title_link
           %h3= zine.subtitle_link
         %h5
-          %span.alt by
-          = zine.author_name_tag
+          %span.alt
+            = I18n.t 'author.attribution'
+          %span.author-name
+            = zine.author_name_tag
         - if zine.excerpt?
           %section.excerpt.entry-summary
             = simple_format zine.excerpt
