--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,13 +1,34 @@
 !!!
 %html
   %head
-    %title Zine Distro
-    = stylesheet_link_tag    "application", :media => "all"
-    = javascript_include_tag "application"
+    %title Zine Distro : Download Print Read
     = csrf_meta_tags
+    %link{:href => root_path, :rel => 'index'}/
+    %link{:href => zine_path(Zine.first), :rel => 'start'}/
+    %link{:href => 'http://assets.zinedistro.org/avatars/favicon.png', :rel => 'icon', :type => 'image/png'}/
+    = auto_discovery_link_tag :atom, zines_path(:format => :atom)
+    = stylesheet_link_tag    'application', :media => 'all'
+    = javascript_include_tag 'application'
   %body
-        
-    - flash.each do |name, msg|
-            #{content_tag :div, msg, class: name}
-          
-    = yield
+    %header
+      .container
+        %h1= link_to I18n.t('site.name'), root_path, :rel => 'home', :accesskey => '1'
+        %h2= link_to I18n.t('site.tagline'), root_path, :rel => 'home'
+        %nav
+          %ul
+            %li= link_to I18n.t('zines.pluralized_title'), zines_path, :accesskey => 'z'
+    #main.container
+      - flash.each do |name, msg|
+              #{content_tag :div, msg, class: name}
+      = yield
+
+    %footer#bottom
+      %nav.container
+        %ul
+          %li.zinedistro
+            =I18n.t('site.name')
+          %li= link_to I18n.t('twitter_link'), 'https://twitter.com/zinedistro'
+          %li.feed= link_to I18n.t 'rss_link', zines_path(:format => :atom)
+          %li
+            = link_to 'A Resistance Army Project', 'http://theresistancearmy.com/'
+            = "( maintained by #{link_to 'Faun', 'https://twitter.com/faunzy'} )".html_safe
