--- a/app/views/zines/index.html.haml
+++ b/app/views/zines/index.html.haml
@@ -1,12 +1,12 @@
 #zines.hfeed
   - @zines.each_with_index do |zine, index|
     = div_for zine, :class => "column span-24 hentry" do
-      .column.span-4
+      .cover.column.span-4
         = zine.cover_image_tag
-      .meta.column.span-20{ class: (index += 1) === zines.length ? 'last': '' }
+      .meta.column.span-20.last
         .entry-title
           %h3= zine.title_link
-          %h3= zine.subtitle_link
+          %h4= zine.subtitle_link
         %h5
           %span.alt
             = I18n.t 'author.attribution'
