Add author detail and show only published authors

--- a/app/views/authors/_author.html.haml
+++ b/app/views/authors/_author.html.haml
@@ -1,1 +1,1 @@
-= link_to author.name, {controller: :authors, action: :zines, id: author.id}, {class: "author"}
+= link_to author.name, {controller: :authors, action: :show, id: author.id}, {class: "author"}
