Add pagination to zines

--- a/app/views/zines/index.html.haml
+++ b/app/views/zines/index.html.haml
@@ -15,3 +15,4 @@
         - if zine.excerpt?
           %section.excerpt.entry-summary
             = simple_format zine.excerpt
+  = paginate @zines
