Fix cover image placement and spacing

--- a/lib/assets/stylesheets/legacy.css.scss.erb
+++ b/lib/assets/stylesheets/legacy.css.scss.erb
@@ -85,7 +85,6 @@ a {
   }
 }
 
-
 article a {
   font-weight: bold;
   margin: 0 -.15em;
@@ -207,10 +206,6 @@ h1 {
   .zine_back:before {
     content: "\2190"
   }
-
-  .cover {
-    margin-bottom: 2em;
-  }
 }
 
 .meta {
@@ -248,12 +243,25 @@ div.cover  {
 
   .zine {
     margin-bottom: 5em;
-
   }
 
-  .meta a {
-    display: block;
-    padding: 0;
+  .cover {
+    margin-right: 14px;
+    margin-top: 6px;
+
+    a {
+      display: block;
+      height: 100%;
+    }
+  }
+
+  .meta {
+    width: 786px;
+
+    a {
+      display: block;
+      padding: 0;
+    }
   }
 
   .stats {
