Fix page spacing

--- a/lib/assets/stylesheets/legacy.css.scss.erb
+++ b/lib/assets/stylesheets/legacy.css.scss.erb
@@ -137,7 +137,7 @@ header {
 
 // main...
 #main {
-  padding-top: 5em;
+  padding: 5em 0 2em;
 }
 
 // ...main
@@ -279,7 +279,7 @@ div.cover  {
 // footer...
 footer {
   background: #eee;
-  margin-top: 5em;
+  margin-top: 2em;
   padding: 1em 0;
 
   ul {
@@ -333,7 +333,7 @@ footer {
 // pagination...
 .pagination {
   list-style-type: none;
-  margin: 3em auto;
+  margin: 2em auto 0;
   text-align: center;
 
   ul, li {
