--- a/lib/assets/stylesheets/blueprint/screen.css
+++ b/lib/assets/stylesheets/blueprint/screen.css
@@ -9,20 +9,52 @@ http://blueprintcss.org
 
 /* reset.css Resets default browser CSS. */
 
-html, body, div, span, object, iframe,
+/**
+ * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
+ * http://cssreset.com
+ */
+html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, code,
-del, dfn, em, img, q, dl, dt, dd, ol, ul, li,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-weight: inherit;
-  font-style: inherit;
   font-size: 100%;
-  font-family: inherit;
+  font: inherit;
   vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 body { 
@@ -92,7 +124,7 @@ acronym     { border-bottom: 1px dotted #666; }
 address     { margin: 0 0 1.5em; font-style: italic; }
 del         { color:#666; }
 
-pre 				{ margin: 1.5em 0; white-space: pre; }
+pre         { margin: 1.5em 0; white-space: pre; }
 pre,code,tt { font: 1em 'andale mono', 'lucida console', monospace; line-height: 1.5; }
 
 
@@ -114,7 +146,7 @@ dd          { margin-left: 1.5em;}
 
 table         { margin-bottom: 1.4em; width:100%; }
 th            { font-weight: bold; }
-thead th 		  { background: #c3d9ff; }
+thead th      { background: #c3d9ff; }
 th,td,caption { padding: 4px 10px 4px 5px; }
 tr.even td    { background: #e5ecf9; }
 tfoot         { font-style: italic; }
@@ -203,17 +235,17 @@ form.inline p { margin-bottom:0; }
 
 
 /*
-	grid.css
-	* Sets up an easy-to-use grid of 24 columns.
-	
-	By default, the grid is 950px wide, with 24 columns
-	spanning 30px, and a 10px margin between columns.
-	
-	If you need fewer or more columns, namespaces or semantic
-	element names, use the compressor script (lib/compress.rb)
-	
-	Note: Changes made in this file will not be applied when
-	using the compressor: make changes in lib/blueprint/grid.css.rb
+  grid.css
+  * Sets up an easy-to-use grid of 24 columns.
+  
+  By default, the grid is 950px wide, with 24 columns
+  spanning 30px, and a 10px margin between columns.
+  
+  If you need fewer or more columns, namespaces or semantic
+  element names, use the compressor script (lib/compress.rb)
+  
+  Note: Changes made in this file will not be applied when
+  using the compressor: make changes in lib/blueprint/grid.css.rb
 */
 
 /* A container should group all your columns. */
@@ -605,9 +637,9 @@ a.negative:active {
      14.4px / 10px = 1.44 (new line height in em's) */
 
 p.incr, .incr p {
-	font-size: 10px;
-	line-height: 1.44em;  
-	margin-bottom: 1.5em;
+  font-size: 10px;
+  line-height: 1.44em;  
+  margin-bottom: 1.5em;
 }
 
 /* Surround uppercase words and abbreviations with this class.
