--- a/app/views/zines/show.html.haml
+++ b/app/views/zines/show.html.haml
@@ -1,5 +1,5 @@
 %article.zine.column.span-24{:id => "zine_#{@zine.id}"}
-  .cover.column.span-6
+  %aside.cover.column.span-6
     = @zine.cover_image_tag
   %section.meta.column.span-18.last
     %nav.column.span-4
