Create author listing with zine authorships

--- a/app/views/authors/_author.html.haml
+++ b/app/views/authors/_author.html.haml
@@ -1,1 +1,2 @@
-= link_to author.name, {controller: :authors, action: :show, id: author.id}, {class: "author"}
+.author
+  = link_to author.name, {controller: :authors, action: :show, id: author.id}
