--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,14 +11,14 @@
   %body
     %header
       %nav.container.root
-        %h1= link_to I18n.t('site.name'), root_path, :rel => 'home', :accesskey => '1'
+        %h1= link_to I18n.t('site.name'), root_path, :rel => 'home'
         %h2= link_to I18n.t('site.tagline'), root_path, :rel => 'home'
         %nav.links
           %ul
-            %li= link_to I18n.t('zines.pluralized_title'), zines_path, :accesskey => 'z'
+            %li= link_to I18n.t('zines.pluralized_title'), zines_path
     %main.container
       - flash.each do |name, msg|
-              #{content_tag :div, msg, class: name}
+        #{content_tag :div, msg, class: name}
       = yield
 
     %footer#bottom
