Add rel tag as attribute on href

--- a/app/views/zines/_zine.html.haml
+++ b/app/views/zines/_zine.html.haml
@@ -1,5 +1,5 @@
 .entry-title
-  = link_to zine_path zine, rel: 'bookmark' do
+  = link_to zine_path(zine), :rel => 'bookmark' do
     %h3.title
       = zine.title
     - if zine.subtitle.present?
