--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -1,3 +1,8 @@
 @import "active_admin/mixins";
 @import "active_admin/base";
 @import "select2/select2.css";
+
+ul {
+  display: inline-flex;
+  list-style-type: none;
+}
