--- a/app/views/zines/index.html.haml
+++ b/app/views/zines/index.html.haml
@@ -3,7 +3,7 @@
     = div_for zine, :class => "column span-24 hentry" do
       .cover.column.span-4
         = link_to(zine.cover_image_tag,
-                  zine_path(zine),
+                  zine.path,
                   class: 'cover_image')
       .meta.column.span-20.last
         = render partial: 'zine', locals: { zine: zine }
