Add show view excerpt styles

--- a/lib/assets/stylesheets/legacy.css.scss.erb
+++ b/lib/assets/stylesheets/legacy.css.scss.erb
@@ -247,6 +247,17 @@ main {
     }
   }
 
+  &.show .excerpt {
+    margin: 1em 0 0;
+    font-size: 1.2em;
+    background-color: $light_gray;
+    padding: 0.8em 1em .125em;
+    font-style: italic;
+
+    p:last-child {
+       margin-bottom: 1em;
+     }
+  }
 }
 
 // ...zine article
