--- a/app/views/zines/index.html.haml
+++ b/app/views/zines/index.html.haml
@@ -1,16 +1,17 @@
 #zines.hfeed
   - @zines.each_with_index do |zine, index|
-    = div_for zine, :class => "column span-24 hentry" do
-      .cover.column.span-4
-        = link_to(zine.cover_image_tag,
-                  zine_path(zine),
-                  class: 'cover_image')
-      .meta.column.span-20.last
-        = render partial: 'zine', locals: { zine: zine }
-        %h5
-          %span.alt
-            = I18n.t 'author.attribution'
-          %span.author-name
-            = zine.author_name_tag
-        = render partial: 'excerpt', locals: { zine: zine }
+    - cache ['v1', zine] do
+      = div_for zine, :class => "column span-24 hentry" do
+        .cover.column.span-4
+          = link_to(zine.cover_image_tag,
+                    zine_path(zine),
+                    class: 'cover_image')
+        .meta.column.span-20.last
+          = render partial: 'zine', locals: { zine: zine }
+          %h5
+            %span.alt
+              = I18n.t 'author.attribution'
+            %span.author-name
+              = zine.author_name_tag
+          = render partial: 'excerpt', locals: { zine: zine }
   = paginate @zines
