--- a/app/views/zines/index.html.haml
+++ b/app/views/zines/index.html.haml
@@ -1,7 +1,7 @@
 #zines.hfeed
   - @zines.each_with_index do |zine, index|
     - cache ['v1', zine] do
-      = div_for zine, :class => "column span-24 hentry" do
+      %div{:id => zine.id, :class => "column span-24 hentry"}
         .cover.column.span-4
           = link_to(zine.cover_image_tag,
                     zine_path(zine),
