Convert haml to erb

--- a/app/views/application/_pingdom.html.erb
+++ b/app/views/application/_pingdom.html.erb
@@ -1,4 +1,4 @@
-:javascript
+<script>
   var _prum = [['id', '#{ENV['PINGDOM_KEY']}'],
               ['mark', 'firstbyte', (new Date()).getTime()]];
   (function() {
@@ -8,3 +8,4 @@
       p.src = '//rum-static.pingdom.net/prum.min.js';
       s.parentNode.insertBefore(p, s);
   })();
+</script>
