--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,12 @@
   <head>
     <title>Zine Distro : Download Print Read</title>
     <%= csrf_meta_tags %>
-    <link href="<%= root_path %>" rel="index">/</link>
-    <%= stylesheet_link_tag 'application', media: 'screen' %>
+    <link href="<%= root_path %>" rel="index"></link>
+    <%= stylesheet_pack_tag 'application', media: 'screen' %>
     <%= render 'pingdom' if ENV['PINGDOM_KEY'].present? %>
-    <link href="http://assets.zinedistro.org/avatars/favicon.png" rel="icon" type="image/png">/</link>
+    <link href="http://assets.zinedistro.org/avatars/favicon.png" rel="icon" type="image/png"></link>
     <%= auto_discovery_link_tag :atom, zines_path(format: :atom) %>
-    <%= javascript_pack_tag 'application', async: true %>
+    <%= javascript_pack_tag 'application', defer: true %>
   </head>
   <body>
     <header>
