--- a/app/views/zines/index.html.erb
+++ b/app/views/zines/index.html.erb
@@ -1,7 +1,7 @@
 <div id="zines" class="hfeed">
   <% @zines.each_with_index do |zine, index| %>
     <% cache ['v1', zine] do %>
-      <div id="<%= zine.id %>" class="column span-24 hentry">
+      <div id="<%= zine.id %>" class="zine column span-24 hentry">
         <div class="cover column span-4">
           <%= link_to(zine.cover_image_tag,
                       zine_path(zine),
