Convert font file to lowercase

--- a/app/assets/stylesheets/legacy.css.scss.erb
+++ b/app/assets/stylesheets/legacy.css.scss.erb
@@ -50,7 +50,7 @@ section {
 
 @font-face {
   font-family: 'Chunkfive';
-  src: font-url(<%= font_path 'Chunkfive.ttf' %>) format('truetype');
+  src: font-url(<%= font_path 'chunkfive.ttf' %>) format('truetype');
 }
 
 // ...font includes
